EK - Changes on tp3.html to make sure the images go to the right asset folder.

--- a/tp3.html
+++ b/tp3.html
@@ -25,7 +25,7 @@
         <div id="screens">
             <div class="screen">
                 <div class="task-label">Tâche initiale pour accéder à CA</div>
-                <img src="./assets/step1.png" alt="step 1" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step1.png" alt="step 1" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 1</h2>
                     <p class="page">
@@ -39,7 +39,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #1</div>
-                <img src="./assets/step2.png" alt="step 2" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets//TP3/step2.png" alt="step 2" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 2</h2>
                     <p class="page">
@@ -53,7 +53,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #1 & Tâche #2</div>
-                <img src="./assets/step3.png" alt="step 3" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step3.png" alt="step 3" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 3</h2>
                     <p class="page">
@@ -68,7 +68,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #2</div>
-                <img src="./assets/step4.png" alt="step 4" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step4.png" alt="step 4" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <span class="note">
                     Note : Les descriptions des plans de cours ont été générées par l'IA étant donné que les cours de Polytechnique
                     <a href="https://www.polymtl.ca/programmes/cours/resistance-des-materiaux-ii" target="_blank">MEC-2405</a> et 
@@ -91,7 +91,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #3</div>
-                <img src="./assets/step5.png" alt="step 5" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step5.png" alt="step 5" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 5</h2>
                     <p class="page">
@@ -111,7 +111,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #3</div>
-                <img src="./assets/step6.png" alt="step 6" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step6.png" alt="step 6" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 6</h2>
                     <p class="page">
