--- a/tp2.html
+++ b/tp2.html
@@ -18,7 +18,7 @@
                 </ul>
             </nav>
         </header>
-        <h1>Scénarimage de l'application Curriculum Analitica</h1>
+        <h1>Scénarimage de l'application Curriculum Analitica - Version du TP2</h1>
 
         <div id="screens">
             <div class="screen">
