--- a/tp3.html
+++ b/tp3.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
 
-        <h1>Scénarimage de l'application Curriculum Analitica</h1>
+        <h1>Scénarimage de l'application Curriculum Analitica - Version du TP3</h1>
         
         <div id="screens">
             <div class="screen">
