--- a/tp3.html
+++ b/tp3.html
@@ -142,6 +142,6 @@
                 <img id="overlay-img" src="" alt="Image agrandie">
             </div>
         </div>
-        <script src="../script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
