EK - Made new pictures for TP3 & changed tp3.html for new descriptions.

--- a/tp2.html
+++ b/tp2.html
@@ -141,6 +141,6 @@
                 <img id="overlay-img" src="" alt="Image agrandie">
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="shared.js"></script>
     </body>
 </html>
