--- a/tp3.html
+++ b/tp3.html
@@ -32,42 +32,153 @@
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Saisie des identifiants de Polytechnique du Dr. Alain Fournier. Clic sur le bouton "Se connecter".
+                        Aucune saisie des informations de connexion. Clic sur le bouton "Se connecter".
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <img src="./assets//TP3/step2.png" alt="step 2" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 2</h2>
+                    <p class="page">
+                        <h3>Page : </h3> Page de connexion - Erreur "Identifiant et mot de passes vide".
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Saisie du nom d'utilisateur.
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <img src="./assets/TP3/step3.png" alt="step 3" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 3</h2>
+                    <p class="page">
+                        <h3>Page : </h3> Page de connexion - Saisie de l'identifiant de Polytechnique.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Aucun saisie du mot de passe. Clic sur "Se connecter".
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <img src="./assets/TP3/step4.png" alt="step 4" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 4</h2>
+                    <p class="page">
+                        <h3>Page : </h3> Page de connexion - Erreur dans l'identifiant de Polytechnique ou le mot de passe.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Saisie du mauvais mot de passe. Clic sur l'oeil fermé pour voir le mot de passe saisi.
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <img src="./assets/TP3/step5.png" alt="step 5" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 5</h2>
+                    <p class="page">
+                        <h3>Page : </h3> Page de connexion - Saisie du mauvais mot de passe.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Clic sur le bouton "Se connecter".
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <img src="./assets/TP3/step6.png" alt="step 6" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 6</h2>
+                    <p class="page">
+                        <h3>Page : </h3> Page de connexion - Erreur dans l'identifiant de Polytechnique ou le mot de passe.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Saisie du bon mot de passe pour l'utilisateur dont l'identifiant est "p1234567".
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <img src="./assets/TP3/step7.png" alt="step 7" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 1</h2>
+                    <p class="page">
+                        <h3>Page : </h3> Page de connexion - Saisie du bon mot de passe.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Clic sur le bouton "Se connecter".
                     </p>
                 </div>
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #1</div>
-                <img src="./assets//TP3/step2.png" alt="step 2" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step8.png" alt="step 8" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
-                    <h2>Étape 2</h2>
+                    <h2>Étape 8</h2>
                     <p class="page">
                         <h3>Page : </h3> Tableau de bord.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1. Clic sur le bouton "Voir la paire".
+                        Tableau de bord -> Mes programmes -> Génie Mécanique. Clic sur le bouton "Voir les détails".
                     </p>
                 </div>
             </div>
             <div class="screen">
-                <div class="task-label">Tâche #1 & Tâche #2</div>
-                <img src="./assets/TP3/step3.png" alt="step 3" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div class="task-label">Tâche #1</div>
+                <img src="./assets/TP3/step9.png" alt="step 9" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
-                    <h2>Étape 3</h2>
+                    <h2>Étape 9</h2>
                     <p class="page">
-                        <h3>Page : </h3>
-                        Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> Programme : Génie mécanique - Détails du chevauchement.
+                        <h3>Page : </h3> Programme : Génie Mécanique.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Clic sur le lien "Systèmes de poutres".
+                        Clic sur le bouton "Voir la matrice de cheminement complète".
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche #1</div>
+                <img src="./assets/TP3/step10.png" alt="step 10" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 10</h2>
+                    <p class="page">
+                        <h3>Page : </h3> Programme : Génie Mécanique - Matrice de chevauchement.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Clic sur la case à l'intersection de MEC-2405 et MEC3-420.
                     </p>
                 </div>
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #2</div>
-                <img src="./assets/TP3/step4.png" alt="step 4" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step11.png" alt="step 11" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 11</h2>
+                    <p class="page">
+                        <h3>Page : </h3> Programme : Génie Mécanique - Détails du chevauchement.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Clic sur le lien "Système de poutres".
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche #2</div>
+                <img src="./assets/TP3/step12.png" alt="step 12" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <span class="note">
                     Note : Les descriptions des plans de cours ont été générées par l'IA étant donné que les cours de Polytechnique
                     <a href="https://www.polymtl.ca/programmes/cours/resistance-des-materiaux-ii" target="_blank">MEC-2405</a> et 
@@ -75,54 +186,139 @@
                     La conversation avec Gemini peut être retrouvée <a href="https://gemini.google.com/app/b012d74ed7f1a152" target="_blank">ici</a>.
                 </span>
                 <div>
-                    <h2>Étape 4</h2>
+                    <h2>Étape 12</h2>
                     <p class="page">
-                        <h3>Page : </h3>
-                        <span>Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> 
-                            Programme : Génie mécanique - Détails du chevauchement -> 
-                            Programme : Génie mécanique - Détails du chevauchement - Extraits de plan de cours.</span>
+                        <h3>Page : </h3> Page de connexion.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Clic sur le bouton "Modéliser l'optimisation".
+                        Saisie des identifiants de Polytechnique du Dr. Alain Fournier. Clic sur le bouton "Se connecter".
                     </p>
                 </div>
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #3</div>
-                <img src="./assets/TP3/step5.png" alt="step 5" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step13.png" alt="step 13" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
-                    <h2>Étape 5</h2>
+                    <h2>Étape 13</h2>
                     <p class="page">
-                        <h3>Page : </h3>
-                        <span>
-                            Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> 
-                            Programme : Génie mécanique - Détails du chevauchement -> 
-                            Programme : Génie mécanique - Détails du chevauchement - Extraits de plan de cours
-                            -> Modélisation de la refonte.
-                        </span>
+                        <h3>Page : </h3> ???
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Clic sur le bouton "Modifier le scénario".
+                        ??? // Retour en arrière.
                     </p>
                 </div>
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #3</div>
-                <img src="./assets/TP3/step6.png" alt="step 6" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step14.png" alt="step 14" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
-                    <h2>Étape 6</h2>
+                    <h2>Étape 14</h2>
                     <p class="page">
-                        <h3>Page : </h3>
-                        Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> 
-                        Programme : Génie mécanique - Détails du chevauchement -> 
-                        Programme : Génie mécanique - Détails du chevauchement - Extraits de plan de cours ->
-                        Modélisation de la refonte. -> Rappot généré avec succès.
+                        <h3>Page : </h3> ???
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Clic sur le bouton "Envoyer par courriel".
+                        ???
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche #3</div>
+                <img src="./assets/TP3/step15.png" alt="step 15" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 15</h2>
+                    <p class="page">
+                        <h3>Page : </h3> ???
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        ???
+                    </p>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="task-label">Tâche #3</div>
+                <img src="./assets/TP3/step1.png" alt="step 16" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 16</h2>
+                    <p class="page">
+                        <h3>Page : </h3> ???
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        ???
+                    </p>
+                </div>
+            </div>
+            <div class="screen hidden">
+                <div class="task-label">Tâche #??</div>
+                <img src="./assets/TP3/step17.png" alt="step 17" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 17</h2>
+                    <p class="page">
+                        <h3>Page : </h3> ???
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        ???
+                    </p>
+                </div>
+            </div>
+            <div class="screen hidden">
+                <div class="task-label">Tâche #??</div>
+                <img src="./assets/TP3/step18.png" alt="step 18" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 18</h2>
+                    <p class="page">
+                        <h3>Page : </h3> ???
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        ???
+                    </p>
+                </div>
+            </div>
+            <div class="screen hidden">
+                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <img src="./assets/TP3/step19.png" alt="step 19" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 19</h2>
+                    <p class="page">
+                        <h3>Page : </h3> ???
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        ???
+                    </p>
+                </div>
+            </div>
+            <div class="screen hidden">
+                <div class="task-label">Tâche #??</div>
+                <img src="./assets/TP3/step20.png" alt="step 20" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 20</h2>
+                    <p class="page">
+                        <h3>Page : </h3> ???
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        ???
+                    </p>
+                </div>
+            </div>
+            <div class="screen hidden">
+                <div class="task-label">Tâche #??</div>
+                <img src="./assets/TP3/step21.png" alt="step 21" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div>
+                    <h2>Étape 20</h2>
+                    <p class="page">
+                        <h3>Page : </h3> ???
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        ???
                     </p>
                 </div>
             </div>
@@ -132,7 +328,7 @@
             <p>Scénarimage fait dans le cadre du TP2 pour l'application Curriculum Analitica du cours 
                 <a href="https://www.polymtl.ca/programmes/cours/anal-et-conc-des-interfaces-utilisateurs" target="_blank">LOG2420 à Polytechnique Montréal</a> - A2025.</p>
             <p>&copy; Kassas Elias, Benaiche Djihed, Abderrahim Leith Ethan, Cipcigan Raul</p>
-            <p>Dernière mise à jour : 4 novembre 2025</p>
+            <p>Dernière mise à jour : 13 novembre 2025</p>
         </footer>
 
         <!-- Fenêtre modale -->
@@ -142,6 +338,6 @@
                 <img id="overlay-img" src="" alt="Image agrandie">
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="shared.js"></script>
     </body>
 </html>
