EK - Made new pictures for TP3 & changed tp3.html for new descriptions.

--- a/tp3.html
+++ b/tp3.html
@@ -227,6 +227,11 @@
             <div class="screen">
                 <div class="task-label">Tâche #3</div>
                 <img src="./assets/TP3/step15.png" alt="step 15" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <span class="note">
+                    Note : La photo de profil de l'utilisateur a été prise en ligne.
+                    L'image est retrouvable à <a href="https://inrs.ca/actualites/le-professeur-alain-fournier-recoit-le-prix-adrien-pouliot-2012/" method="_blank">
+                        ici</a>. 
+                </span>
                 <div>
                     <h2>Étape 15</h2>
                     <p class="page">
@@ -240,7 +245,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #3</div>
-                <img src="./assets/TP3/step1.png" alt="step 16" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <img src="./assets/TP3/step16.png" alt="step 16" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 16</h2>
                     <p class="page">
