EK - Made new pictures for TP3 & changed tp3.html for new descriptions.

--- a/tp3.html
+++ b/tp3.html
@@ -257,7 +257,7 @@
                     </p>
                 </div>
             </div>
-            <div class="screen hidden">
+            <!-- <div class="screen hidden">
                 <div class="task-label">Tâche #??</div>
                 <img src="./assets/TP3/step17.png" alt="step 17" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
@@ -326,7 +326,7 @@
                         ???
                     </p>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <footer>
