--- a/tp3.html
+++ b/tp3.html
@@ -229,7 +229,7 @@
                 <img src="./assets/TP3/step15.png" alt="step 15" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <span class="note">
                     Note : La photo de profil de l'utilisateur a été prise en ligne.
-                    L'image est retrouvable à <a href="https://inrs.ca/actualites/le-professeur-alain-fournier-recoit-le-prix-adrien-pouliot-2012/" method="_blank">
+                    L'image est retrouvable à <a href="https://inrs.ca/actualites/le-professeur-alain-fournier-recoit-le-prix-adrien-pouliot-2012/" target="_blank">
                         ici</a>. 
                 </span>
                 <div>
