EK - Made new pictures for TP3 & changed tp3.html for new descriptions.

--- a/tp3.html
+++ b/tp3.html
@@ -343,6 +343,6 @@
                 <img id="overlay-img" src="" alt="Image agrandie">
             </div>
         </div>
-        <script src="shared.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
