EK - Changes to the html of tp3.html

--- a/tp3.html
+++ b/tp3.html
@@ -23,7 +23,7 @@
         
         <div id="screens">
             <div class="screen">
-                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <div class="task-label">Action initiale pour accéder à CA</div>
                 <img src="./assets/TP3/step1.png" alt="step 1" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 1</h2>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="screen">
-                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <div class="task-label">Action initiale pour accéder à CA</div>
                 <img src="./assets//TP3/step2.png" alt="step 2" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 2</h2>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="screen">
-                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <div class="task-label">Action initiale pour accéder à CA</div>
                 <img src="./assets/TP3/step3.png" alt="step 3" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 3</h2>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="screen">
-                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <div class="task-label">Action initiale pour accéder à CA</div>
                 <img src="./assets/TP3/step4.png" alt="step 4" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 4</h2>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="screen">
-                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <div class="task-label">Action initiale pour accéder à CA</div>
                 <img src="./assets/TP3/step5.png" alt="step 5" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 5</h2>
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="screen">
-                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <div class="task-label">Action initiale pour accéder à CA</div>
                 <img src="./assets/TP3/step6.png" alt="step 6" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 6</h2>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="screen">
-                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <div class="task-label">Action initiale pour accéder à CA</div>
                 <img src="./assets/TP3/step7.png" alt="step 7" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 1</h2>
@@ -188,7 +188,7 @@
                 <div>
                     <h2>Étape 12</h2>
                     <p class="page">
-                        <h3>Page : </h3> Page de connexion.
+                        <h3>Page : </h3> Programme : Génie Mécanique - Détails du chevauchement - Extraits des plans de cours.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
@@ -202,11 +202,11 @@
                 <div>
                     <h2>Étape 13</h2>
                     <p class="page">
-                        <h3>Page : </h3> ???
+                        <h3>Page : </h3> Programme : Génie Mécanique - Modélisation de la refonte.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        ??? // Retour en arrière.
+                        Clic sur le bouton "Exporter le plan d'action".
                     </p>
                 </div>
             </div>
@@ -216,16 +216,16 @@
                 <div>
                     <h2>Étape 14</h2>
                     <p class="page">
-                        <h3>Page : </h3> ???
+                        <h3>Page : </h3> Programme : Génie Mécanique - Rapport généré avec succès.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        ???
+                        Clic sur le texte "➜]".
                     </p>
                 </div>
             </div>
-            <div class="screen">
-                <div class="task-label">Tâche #3</div>
+            <!-- <div class="screen">
+                <div class="task-label hidden">Tâche #3</div>
                 <img src="./assets/TP3/step15.png" alt="step 15" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <span class="note">
                     Note : La photo de profil de l'utilisateur a été prise en ligne.
@@ -235,21 +235,21 @@
                 <div>
                     <h2>Étape 15</h2>
                     <p class="page">
-                        <h3>Page : </h3> ???
+                        <h3>Page : </h3> Page de profil de l'utilisateur connecté.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        ???
+                        Clic sur le bouton "Se déconnecter".
                     </p>
                 </div>
-            </div>
+            </div> -->
             <div class="screen">
-                <div class="task-label">Tâche #3</div>
-                <img src="./assets/TP3/step16.png" alt="step 16" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
+                <div class="task-label">Tâche finale pour quitter CA</div>
+                <img src="./assets/TP3/step15.png" alt="step 15" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
-                    <h2>Étape 16</h2>
+                    <h2>Étape 15</h2>
                     <p class="page">
-                        <h3>Page : </h3> ???
+                        <h3>Page : </h3> Page de connexion.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
@@ -333,7 +333,7 @@
             <p>Scénarimage fait dans le cadre du TP2 pour l'application Curriculum Analitica du cours 
                 <a href="https://www.polymtl.ca/programmes/cours/anal-et-conc-des-interfaces-utilisateurs" target="_blank">LOG2420 à Polytechnique Montréal</a> - A2025.</p>
             <p>&copy; Kassas Elias, Benaiche Djihed, Abderrahim Leith Ethan, Cipcigan Raul</p>
-            <p>Dernière mise à jour : 13 novembre 2025</p>
+            <p>Dernière mise à jour : 14 novembre 2025</p>
         </footer>
 
         <!-- Fenêtre modale -->
