--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CurriculumAnalitica — Accueil</title>
-    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/scenarimage.css">
     <link rel="stylesheet" href="./css/print.css" media="print">
     <link rel="stylesheet" href="./css/phone.css" media="(max-width: 768px)">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 768px) and (max-width: 1024px)">
