--- a/tp3.html
+++ b/tp3.html
@@ -16,6 +16,7 @@
                     <li class="active"><a href="./tp2.html">TP2</a></li>
                     <li class=""><a href="./tp3.html">TP3</a></li>
                 </ul>
+                <img href="assets/ca.png"/>
             </nav>
         </header>
 
